* fixed UI test, reorganized to use test suite